# saccade

./: .gitignore  CLAUDE.md  Cargo.toml  EXPERIMENTS.md  results.jsonl
examples/: bench_timm.rs  diag.rs  mpii_bench.rs  replay.rs  webcam.rs  webgazer.rs  webgazer_cnn.rs
src/: calib_state.rs  calibration.rs  ear.rs  edge.rs  ellipse.rs  frame.rs  kalman.rs  lib.rs  one_euro.rs  preprocess.rs  pure.rs  ridge.rs  session.rs  timm.rs  tracker.rs
survey/: eye_tracking_survey.tex
tools/: mpii_ablation.py  preprocess_mpii.py
