[package]
name = "saccade"
version = "0.1.0"
edition = "2024"
authors = ["Leo Matyushkin"]
description = "Pure Rust eye tracking library"
license = "MIT"
repository = "https://github.com/matyushkin/saccade"
keywords = ["eye-tracking", "gaze", "pupil", "computer-vision", "saccade"]
categories = ["computer-vision", "multimedia"]

[dependencies]
nalgebra = "0.33"
