[package]
name = "saccade"
version = "0.1.0"
edition = "2024"
authors = ["Leo Matyushkin"]
description = "Pure Rust eye tracking library"
license = "MIT"
repository = "https://github.com/matyushkin/saccade"
keywords = ["eye-tracking", "gaze", "pupil", "computer-vision", "saccade"]
categories = ["computer-vision", "multimedia"]

[dependencies]
nalgebra = "0.33"

[dev-dependencies]
image = "0.25"

[[example]]
name = "webcam"
required-features = ["demo"]

[[example]]
name = "diag"
required-features = ["demo"]

[features]
demo = ["dep:nokhwa", "dep:minifb", "dep:rustface", "dep:image"]

[dependencies.nokhwa]
version = "0.10"
features = ["input-native"]
optional = true

[dependencies.minifb]
version = "0.28"
optional = true

[dependencies.rustface]
version = "0.1"
optional = true

[dependencies.image]
version = "0.25"
optional = true
